--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.1.0",
     "@astrojs/react": "^4.2.1",
     "@fontsource-variable/inter": "^5.2.5",
     "@radix-ui/react-dialog": "^1.1.6",
