--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "dist"
   ],
   "compilerOptions": {
+    "strictNullChecks": true,
+    "allowJs": true,
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
