--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terpalb24-web",
+  "name": "terpal-b24",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,32 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.0",
-    "@astrojs/react": "^4.2.1",
-    "@fontsource-variable/inter": "^5.2.5",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@tailwindcss/vite": "^4.0.9",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "astro": "^5.5.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.477.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sharp": "^0.33.5",
-    "swiper": "^11.2.6",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.9",
-    "tailwindcss-animate": "^1.0.7"
+    "@astrojs/mdx": "^4.2.6",
+    "@lucide/astro": "^0.510.0",
+    "@tailwindcss/vite": "^4.1.6",
+    "astro": "^5.7.12",
+    "gsap": "^3.13.0",
+    "sharp": "^0.34.1",
+    "tailwindcss": "^4.1.6",
+    "three": "^0.176.0"
   },
-  "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild",
-      "sharp"
-    ]
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
+  "devDependencies": {
+    "@types/three": "^0.176.0"
   }
 }
