--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "astro": "^5.7.12",
     "gsap": "^3.13.0",
     "sharp": "^0.34.1",
-    "tailwindcss": "^4.1.6",
-    "three": "^0.176.0"
+    "tailwindcss": "^4.1.6"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "devDependencies": {
