--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
+    "dayjs": "^1.11.18",
+    "ical-generator": "^9.0.0",
     "lucide-react": "^0.541.0",
     "motion": "^12.23.12",
     "next": "15.5.0",
