--- a/package.json
+++ b/package.json
@@ -12,27 +12,33 @@
   "dependencies": {
     "@bprogress/next": "^3.2.12",
     "dayjs": "^1.11.18",
-    "ical-generator": "^9.0.0",
-    "lucide-react": "^0.541.0",
-    "motion": "^12.23.12",
-    "next": "15.5.0",
-    "next-image-export-optimizer": "^1.19.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-photo-album": "^3.1.0",
-    "yet-another-react-lightbox": "^3.25.0"
+    "ical-generator": "^10.0.0",
+    "lucide-react": "^0.574.0",
+    "motion": "^12.34.1",
+    "next": "16.1.6",
+    "next-image-export-optimizer": "^1.20.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "react-photo-album": "^3.5.0",
+    "yet-another-react-lightbox": "^3.29.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@content-collections/core": "^0.11.0",
+    "@content-collections/core": "^0.14.0",
     "@content-collections/markdown": "^0.1.4",
-    "@content-collections/next": "^0.2.7",
+    "@content-collections/next": "^0.2.11",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "zod": "^4.1.1"
+    "zod": "^4.3.6"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.14",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
