--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@content-collections/core": "^0.14.0",
+    "@content-collections/core": "0.11.0",
     "@content-collections/markdown": "^0.1.4",
     "@content-collections/next": "^0.2.11",
     "@tailwindcss/postcss": "^4",
